tests/baselines/reference/subtypesOfTypeParameterWithRecursiveConstraints.errors.txt
==== tests/cases/compiler/subtypesOfTypeParameterWithRecursiveConstraints.ts (99 errors) ====
    // checking whether other types are subtypes of type parameters with constraints
    
    class Foo<T> { foo: T; }
    function f<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>>(t: T, u: U, v: V) {
               ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        // error
        var r1 = true ? t : u;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'T' or 'U'.
        var r1 = true ? u : t;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'U' or 'T'.
    
        // error
        var r2 = true ? t : v;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'T' or 'V'.
        var r2 = true ? v : t;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'V' or 'T'.
    
        // error
        var r3 = true ? v : u;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'V' or 'U'.
        var r3 = true ? u : v;
                 ~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'U' or 'V'.
    
        // ok?
        var r4 = true ? t : new Foo<T>();
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'T' or 'Foo<T>'.
        var r4 = true ? new Foo<T>() : t;
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<T>' or 'T'.
    
        // ok?
        var r5 = true ? u : new Foo<T>();
        var r5 = true ? new Foo<T>() : u;
    
        // ok?
        var r6 = true ? v : new Foo<T>();
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'V' or 'Foo<T>'.
        var r6 = true ? new Foo<T>() : v;
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<T>' or 'V'.
    
    
        // ok?
        var r7 = true ? t : new Foo<U>();
        var r7 = true ? new Foo<U>() : t;
    
        // ok?
        var r8 = true ? u : new Foo<U>();
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'U' or 'Foo<U>'.
        var r8 = true ? new Foo<U>() : u;
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<U>' or 'U'.
    
        // ok?
        var r9 = true ? v : new Foo<U>();
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'V' or 'Foo<U>'.
        var r9 = true ? new Foo<U>() : v;
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<U>' or 'V'.
    
    
        // ok?
        var r10 = true ? t : new Foo<V>();
                  ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'T' or 'Foo<V>'.
        var r10 = true ? new Foo<V>() : t;
                  ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<V>' or 'T'.
    
        // ok?
        var r11 = true ? u : new Foo<V>();
                  ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'U' or 'Foo<V>'.
        var r11 = true ? new Foo<V>() : u;
                  ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'Foo<V>' or 'U'.
    
        // ok?
        var r12 = true ? v : new Foo<V>();
        var r12 = true ? new Foo<V>() : v;
    }
    
    module M1 {
        class Base<T> {
            foo: T;
        }
    
        class D1<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: T
        }
    
        class D2<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
              ~~
!!! error TS2141: Class 'M1.D2<T, U, V>' cannot extend class 'M1.Base<T>':
!!! 	Types of property 'foo' of types 'D2<T, U, V>' and 'Base<T>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: U
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'T'.
        }
    
        class D3<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<T> {
              ~~
!!! error TS2141: Class 'M1.D3<T, U, V>' cannot extend class 'M1.Base<T>':
!!! 	Types of property 'foo' of types 'D3<T, U, V>' and 'Base<T>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: V
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'T'.
        }
    
        class D4<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
              ~~
!!! error TS2141: Class 'M1.D4<T, U, V>' cannot extend class 'M1.Base<U>':
!!! 	Types of property 'foo' of types 'D4<T, U, V>' and 'Base<U>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: T
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'U'.
        }
    
        class D5<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: U
        }
    
        class D6<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<U> {
              ~~
!!! error TS2141: Class 'M1.D6<T, U, V>' cannot extend class 'M1.Base<U>':
!!! 	Types of property 'foo' of types 'D6<T, U, V>' and 'Base<U>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: V
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'U'.
        }
    
        class D7<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
              ~~
!!! error TS2141: Class 'M1.D7<T, U, V>' cannot extend class 'M1.Base<V>':
!!! 	Types of property 'foo' of types 'D7<T, U, V>' and 'Base<V>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: T
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'V'.
        }
    
        class D8<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
              ~~
!!! error TS2141: Class 'M1.D8<T, U, V>' cannot extend class 'M1.Base<V>':
!!! 	Types of property 'foo' of types 'D8<T, U, V>' and 'Base<V>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: U
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'V'.
        }
    
        class D9<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base<V> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: V
        }
    }
    
    
    module M2 {
        class Base2<T> {
            foo: Foo<T>;
        }
    
        class D1<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
              ~~
!!! error TS2141: Class 'M2.D1<T, U, V>' cannot extend class 'M2.Base2<T>':
!!! 	Types of property 'foo' of types 'D1<T, U, V>' and 'Base2<T>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<U>' and 'Foo<T>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: T
        }
    
        class D2<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: U
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'T'.
        }
    
        class D3<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<T> {
              ~~
!!! error TS2141: Class 'M2.D3<T, U, V>' cannot extend class 'M2.Base2<T>':
!!! 	Types of property 'foo' of types 'D3<T, U, V>' and 'Base2<T>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<V>' and 'Foo<T>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: T;
            foo: V
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'T'.
        }
    
        class D4<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: T
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'U'.
        }
    
        class D5<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
              ~~
!!! error TS2141: Class 'M2.D5<T, U, V>' cannot extend class 'M2.Base2<U>':
!!! 	Types of property 'foo' of types 'D5<T, U, V>' and 'Base2<U>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<T>' and 'Foo<U>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: U
        }
    
        class D6<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<U> {
              ~~
!!! error TS2141: Class 'M2.D6<T, U, V>' cannot extend class 'M2.Base2<U>':
!!! 	Types of property 'foo' of types 'D6<T, U, V>' and 'Base2<U>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<V>' and 'Foo<U>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: U;
            foo: V
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'U'.
        }
    
        class D7<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
              ~~
!!! error TS2141: Class 'M2.D7<T, U, V>' cannot extend class 'M2.Base2<V>':
!!! 	Types of property 'foo' of types 'D7<T, U, V>' and 'Base2<V>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<U>' and 'Foo<V>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: T
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'V'.
        }
    
        class D8<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
              ~~
!!! error TS2141: Class 'M2.D8<T, U, V>' cannot extend class 'M2.Base2<V>':
!!! 	Types of property 'foo' of types 'D8<T, U, V>' and 'Base2<V>' are incompatible:
!!! 		Types of property 'foo' of types 'Foo<T>' and 'Foo<V>' are incompatible.
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: U
            ~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'V'.
        }
    
        class D9<T extends Foo<U>, U extends Foo<T>, V extends Foo<V>> extends Base2<V> {
                 ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            [x: string]: V;
            foo: V
        }
    }